--- a/7/package.json
+++ b/7/package.json
@@ -14,6 +14,8 @@
     "vite": "^6.0.1"
   },
   "dependencies": {
+    "gsap": "^3.12.5",
+    "lil-gui": "^0.20.0",
     "three": "^0.171.0"
   }
 }
