--- a/17/package.json
+++ b/17/package.json
@@ -14,6 +14,8 @@
     "vite": "^6.0.1"
   },
   "dependencies": {
+    "@types/cannon": "^0.1.13",
+    "cannon": "^0.6.2",
     "gsap": "^3.12.5",
     "lil-gui": "^0.20.0",
     "three": "^0.171.0"
