--- a/17/package.json
+++ b/17/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@types/cannon": "^0.1.13",
-    "cannon": "^0.6.2",
+    "cannon-es": "^0.20.0",
     "gsap": "^3.12.5",
     "lil-gui": "^0.20.0",
     "three": "^0.171.0"
